fix: update body text color to improve readability

--- a/css/style-og.css
+++ b/css/style-og.css
@@ -16,7 +16,7 @@ body {
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
-    color: #212121;
+    color: #000000;
 }
 
 .paginaprincipale {
